--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,13 @@ body {
   background: #343a40;
   height: 100%;
 }
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, #30ff00);
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #00c6ff);
+}
